# This file is a shell script that supplies the information necessary
# to tailor a template configure script into the configure script
# appropriate for this directory.  For more information, check any
# existing configure script.

configdirs="src doc"
srctrigger=Makefile.in
srcname="kerberos"

# per-host:

host_makefile_frag=

case "${host}" in
  i[345]86-*-windows*)	host_makefile_frag=config/mh-win
			configdirs="src" ;;
  hppa1.[01]-hp-hpux*)	host_makefile_frag=config/mh-snake ;;
  *-*-macos* | *-*-mpw*)
			host_makefile_frag=config/mh-mac
			configdirs="src" ;;
  mips*-pyramid-osx*)	host_makefile_frag=config/mh-pyramid ;;
  mips*-sgi-irix4*)	host_makefile_frag=config/mh-irix4 ;;
  mips*-sgi-irix5*)	host_makefile_frag=config/mh-irix5 ;;
esac

# per-target:
